ossfuzz: Update makefile

--- a/tests/ossfuzz/Makefile
+++ b/tests/ossfuzz/Makefile
@@ -1,3 +1,5 @@
+all: fuzz fuzz_v2
+
 fuzz: fuzz.c
 	$(CC) $(CFLAGS) -c fuzz.c -I ../../src/liblzma/api/
 	$(CXX) $(CXXFLAGS) -lFuzzingEngine fuzz.o -o $(OUT)/fuzz \
