ossfuzz: Fix make and file locations

--- a/tests/ossfuzz/Makefile
+++ b/tests/ossfuzz/Makefile
@@ -7,7 +7,7 @@ fuzz: fuzz.c
 	
 fuzz_v2: fuzz_v2.c
 	$(CC) $(CFLAGS) -c fuzz_v2.c -I ../../src/liblzma/api/
-	$(CXX) $(CXXFLAGS) -lFuzzingEngine fuzz.o -o $(OUT)/fuzz_v2 \
+	$(CXX) $(CXXFLAGS) -lFuzzingEngine fuzz_v2.o -o $(OUT)/fuzz_v2 \
 	      ../../src/liblzma/.libs/liblzma.a
 
 clean:
